# quotes-cli

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ansi.cpp  ansi.h  args.cpp  args.h  commands.cpp  commands.h  config.cpp  config.h  helpers.cpp  helpers.h  main.cpp  quotes.cpp  quotes.h
src-cli/: CMakeLists.txt  ansi.cpp  ansi.h  args.cpp  args.h  helpers.cpp  helpers.h  main.cpp  quotes.cpp  quotes.h
